--- a/rebar.config
+++ b/rebar.config
@@ -3,11 +3,15 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts, [debug_info, warnings_as_failures]}.
 
+{sub_dirs, ["rel"]}.
+
 {deps, [
         %% ejson for JSON and header parsing
         {ejson, "0.1.0", {git,"http://github.com/kevsmith/ejson.git",
                           {tag, "0.1"}}},
         %% Mocking lib
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
-
+        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
+        %% REST framework
+        {webmachine, "1.8.*",
+         {git, "git://github.com/basho/webmachine", {tag, "webmachine-1.8.1"}}}
         ]}.
