Fix up default config vars.

--- a/rel/vars.config
+++ b/rel/vars.config
@@ -1,3 +1,3 @@
-{config_file, "/etc/darklaunch/config.js"}.
+{config_file, "/etc/opscode/dark_launch_features.json"}.
 %% Time in millis
-{reload_time, 1000}.
+{reload_time, 10000}.
