Getting OTP releases working
This commit includes code to conditionally enable webmachine
when darklaunch is configured in 'standalone' mode. Specifically,
the code looks for listen_ip and listen_port app.config entries  If
those are found then a separate instance of webmachine is started
under darklaunch's supervision tree. If these entries are missing
then darklaunch will skip starting up webmachine.

In either case the dark_launch gen_server is still launched

--- a/rel/files/app.config
+++ b/rel/files/app.config
@@ -10,6 +10,8 @@
 
 {darklaunch, [{config, "{{config_file}}" },
               %% Time in millis
-              {reload_time, {{reload_time}} }
+              {reload_time, {{reload_time}} },
+              {listen_ip, "{{listen_ip}}" },
+              {listen_port, {{listen_port}} }
              ]}
 ].
