--- a/rel/reltool.config
+++ b/rel/reltool.config
@@ -1,5 +1,5 @@
 {sys, [
-       {lib_dirs, ["../deps"]},
+       {lib_dirs, ["../deps", "apps"]},
        {rel, "darklaunch", "0.1",
         [
          kernel,
@@ -8,7 +8,8 @@
          crypto,
          mochiweb,
          webmachine,
-         ejson
+         ejson,
+         darklaunch
         ]},
        {rel, "start_clean", "",
         [
@@ -25,6 +26,7 @@
        {app, mochiweb, [{incl_cond, include}]},
        {app, webmachine, [{incl_cond, include}]},
        {app, ejson, [{incl_cond, include}]},
+       {app, darklaunch, [{incl_cond, include}]},
        {app, runtime_tools, [{incl_cond, include}]}
       ]}.
 
