--- a/rel/vars.config
+++ b/rel/vars.config
@@ -1,3 +1,5 @@
 {config_file, "/etc/opscode/dark_launch_features.json"}.
 %% Time in millis
 {reload_time, 10000}.
+{listen_ip, "127.0.0.1"}.
+{listen_port, 8000}.
