--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,3 +1,4 @@
 %%-*- mode: erlang -*-
-{[feature, org], dark_launch_resource, []}.
-{[feature], dark_launch_resource, []}.
+{[feature, org], darklaunch_resource, []}.
+{[feature], darklaunch_resource, []}.
+{[], darklaunch_resource, []}.
