Add a warning about editing dispatch.conf

--- a/priv/dispatch.conf
+++ b/priv/dispatch.conf
@@ -1,4 +1,5 @@
 %%-*- mode: erlang -*-
+% If you edit this, be sure to update the dispatch.conf in erchef as well
 {[feature, org], darklaunch_resource, []}.
 {[feature], darklaunch_resource, []}.
 {[], darklaunch_resource, []}.
