--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,7 @@
 %% -*- mode: erlang -*-
 %% -*- tab-width: 4;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
-{erl_opts, [debug_info, warnings_as_failures]}.
+{erl_opts, [debug_info, warnings_as_errors]}.
 
 {deps, [
         %% ejson for JSON and header parsing
