--- a/rebar.config
+++ b/rebar.config
@@ -14,3 +14,4 @@
         {webmachine, "1.8.*",
          {git, "git://github.com/basho/webmachine", {tag, "webmachine-1.8.1"}}}
         ]}.
+{cover_enabled, true}.
