--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,7 @@
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
 
         %% REST framework
-        {webmachine, "1.8.*",
-         {git, "git://github.com/basho/webmachine", {tag, "webmachine-1.8.1"}}}
+        {webmachine, ".*",
+         {git, "git://github.com/basho/webmachine", {tag, "1.9.0-mochifix"}}}
         ]}.
 {cover_enabled, true}.
