Added surefire report output for Jenkins

--- a/rebar.config
+++ b/rebar.config
@@ -14,4 +14,8 @@
         {webmachine, ".*",
          {git, "git://github.com/basho/webmachine", {tag, "1.9.0-mochifix"}}}
         ]}.
+
+{eunit_opts,
+ [verbose,
+  {report,{eunit_surefire,[{dir,"."}]}}]}.
 {cover_enabled, true}.
