Use git urls instead of https

--- a/rebar.config
+++ b/rebar.config
@@ -5,7 +5,7 @@
 
 {deps, [
         %% ejson for JSON and header parsing
-        {ejson, "0.1.0", {git,"http://github.com/kevsmith/ejson.git",
+        {ejson, "0.1.0", {git,"git://github.com/kevsmith/ejson.git",
                           {tag, "0.1"}}},
         %% Mocking lib
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}},
