Use jiffy instead of ejson

--- a/rebar.config
+++ b/rebar.config
@@ -3,12 +3,10 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts, [warnings_as_errors]}.
 
-{deps, [
-        %% ejson for JSON and header parsing
-        {ejson, "0.1.0", {git,"git://github.com/kevsmith/ejson.git",
-                          {tag, "0.1"}}},
+{deps, [{jiffy, ".*",
+         {git, "git://github.com/davisp/jiffy.git", {tag, "0.6.1"}}},
         %% Mocking lib
         {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
-        ]}.
+       ]}.
 
 {cover_enabled, true}.
