Convert to envy

--- a/rebar.config
+++ b/rebar.config
@@ -12,7 +12,10 @@
 
         %% REST framework
         {webmachine, ".*",
-         {git, "git://github.com/basho/webmachine", {tag, "1.9.0-mochifix"}}}
+         {git, "git://github.com/basho/webmachine", {tag, "1.9.0-mochifix"}}},
+
+        {envy, ".*",
+         {git, "git://github.com/manderson26/envy.git", {branch, "master"}}}
         ]}.
 
 {eunit_opts,
