--- a/rebar.config
+++ b/rebar.config
@@ -11,7 +11,11 @@
          {git, "git://github.com/davisp/jiffy.git", {tag, "0.6.1"}}},
 
         {meck, ".*",
-         {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
+         {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
+
+        %% REST framework
+        {envy, ".*",
+         {git, "git://github.com/manderson26/envy.git", {branch, "master"}}}
        ]}.
 
 {cover_enabled, true}.
