--- a/rebar.config
+++ b/rebar.config
@@ -4,11 +4,11 @@
 {erl_opts, [warnings_as_errors]}.
 
 {deps, [
-        %% ejson for JSON and header parsing
-        {ejson, "0.1.0", {git,"git://github.com/kevsmith/ejson.git",
-                          {tag, "0.1"}}},
-        %% Mocking lib
-        {meck, ".*", {git, "git://github.com/eproxus/meck.git", "HEAD"}}
-        ]}.
+        {jiffy, ".*",
+         {git, "git://github.com/davisp/jiffy.git", {tag, "0.6.1"}}},
+
+        {meck, ".*",
+         {git, "git://github.com/eproxus/meck.git", {branch, "master"}}}
+       ]}.
 
 {cover_enabled, true}.
