Updated for Erlang 17 support

--- a/rebar.config
+++ b/rebar.config
@@ -1,7 +1,10 @@
 %% -*- mode: erlang -*-
 %% -*- tab-width: 4;erlang-indent-level: 4;indent-tabs-mode: nil -*-
 %% ex: ts=4 sw=4 ft=erlang et
-{erl_opts, [warnings_as_errors]}.
+{erl_opts, [
+    warnings_as_errors,
+    {platform_define, "^[0-9]+", namespaced_types}
+]}.
 
 {deps, [
         {jiffy, ".*",
@@ -12,3 +15,4 @@
        ]}.
 
 {cover_enabled, true}.
+
