--- a/rebar.config
+++ b/rebar.config
@@ -3,20 +3,49 @@
 %% ex: ts=4 sw=4 ft=erlang et
 {erl_opts, [
     warnings_as_errors,
-    {platform_define, "^[0-9]+", namespaced_types}
+    {platform_define, "^[0-9]+", namespaced_types},
+    {platform_define, "^(R|1|20)", fun_stacktrace},
+
+    warn_bif_clash,
+    warn_export_all,
+    warn_obsolete_guard,
+
+    warn_unused_import,
+
+    warn_unused_record,
+    warn_untyped_record,
+
+    warn_shadow_vars,
+    warn_unused_vars,
+    warn_export_vars,
+    warn_exported_vars,
+
+    warn_unused_function,
+    warn_deprecated_function,
+
+    strict_validation
+
 ]}.
 
 {deps, [
         {jiffy, ".*",
-         {git, "git://github.com/davisp/jiffy.git", {tag, "0.6.1"}}},
+         {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
 
         {meck, ".*",
          {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
 
-        %% REST framework
         {envy, ".*",
          {git, "git://github.com/manderson26/envy.git", {branch, "master"}}}
        ]}.
 
-{cover_enabled, true}.
+{profiles, [
+    {dev, [
+           {erl_opts, [nowarn_export_all]}
+    ]},
+    {test, [
+            {erl_opts, [nowarn_export_all]}
+           ]
+    }
+]}.
 
+{cover_enabled, true}.
