--- a/rebar.config
+++ b/rebar.config
@@ -32,10 +32,10 @@
          {git, "https://github.com/davisp/jiffy.git", {branch, "master"}}},
 
         {meck, ".*",
-         {git, "git://github.com/eproxus/meck.git", {branch, "master"}}},
+         {git, "https://github.com/eproxus/meck.git", {branch, "master"}}},
 
         {envy, ".*",
-         {git, "git://github.com/manderson26/envy.git", {branch, "master"}}}
+         {git, "https://github.com/manderson26/envy.git", {branch, "master"}}}
        ]}.
 
 {profiles, [
